@@ -1,0 +1,13 @@
+# $NetBSD: Makefile,v 1.1 2019/08/13 02:29:53 brook Exp $
+
+DISTNAME=	outline
+PKGNAME=	tex-${DISTNAME}-2019
+TEXLIVE_REV=	18360
+
+MAINTAINER=	pkgsrc-users@NetBSD.org
+HOMEPAGE=	http://ctan.org/pkg/outline
+COMMENT=	List environment for making outlines
+LICENSE=	lppl-1.3c
+
+.include "../../print/texlive/package.mk"
+.include "../../mk/bsd.pkg.mk"
