@@ -1,0 +1,2 @@
+@comment $NetBSD: PLIST,v 1.1 2019/08/13 02:29:53 brook Exp $
+share/texmf-dist/tex/latex/outline/outline.sty
