@@ -1,0 +1,6 @@
+$NetBSD: distinfo,v 1.1 2019/08/13 02:29:53 brook Exp $
+
+SHA1 (tex-outline-18360/outline.tar.xz) = b27441d08a312cc76a667741ef70c016c7a8b3a2
+RMD160 (tex-outline-18360/outline.tar.xz) = 9ff5dbdd522e2b7be753594a3ac2f37bdd20fcc9
+SHA512 (tex-outline-18360/outline.tar.xz) = ccfb49c4e035f0d246f00aae56efa9d6570ad3997c44e2bf70588ce67a0bc3fb7bccff19b65629fb27158b0156a9802d97ea1f8edf6f4494f644f40df5d97118
+Size (tex-outline-18360/outline.tar.xz) = 1528 bytes
